--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -158,9 +158,23 @@ input {
   }  
 }
 
-.field_with_errors {
-  @extend .control-group;
-  @extend .error;
+/* microposts */
+
+.microposts {
+  list-style: none;
+  margin: 10px 0 0 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
+.content {
+  display: block;
+}
+
+.timestamp {
+  color: $grayLight;
 }
 
 /* users index */
@@ -176,6 +190,11 @@ input {
       border-bottom: 1px solid $grayLighter
     }
   }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  @extend .error;
 }
 
 /* miscellaneous */
